# gcs

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  simp.ts  soft_sim.csv  vite.config.ts.timestamp-1702727014151-ac4a9bd4837b1.mjs
.github/workflows/: build.yaml
public/: cansat.glb
src/: Cansat.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: Dummysat.tsx  _Dummysat.tsx  dummysat.glb
src/pages/: gcs.tsx  web.tsx
