[package]
name = "gcs-main"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2.2"
tokio = "1.32.0"
paho-mqtt = "0.12.3"
futures = "0.3"
futures-timer = "3.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
home = "0.5.9"

[dependencies.tauri-plugin-serialport]
git = "https://github.com/lzhida/tauri-plugin-serialport"
tag = "v0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
